concord_macros/tests/v5/dsl/fail/fail_fmt_empty.stderr
error: fmt[...] requires at least one piece
 --> tests/v5/dsl/fail/fail_fmt_empty.rs:8:15
  |
8 |         path [fmt[]]
  |               ^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_fmt_empty.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
